# WiselyMark

./: package.json
src/: App.tsx  MarkdownEditor.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs
